工事中の文言を追加

--- a/YatoiroHouseHomePage/index.html
+++ b/YatoiroHouseHomePage/index.html
@@ -20,7 +20,10 @@
             </div>
         </div>
         <div class="divMain">
-            ここに本文いれる
+            <h1>
+                現在工事中！<br>
+                もう少し待っててね
+            </h1>
         </div>
     </body>
 </html>
