共通部分ができたので全部の画面を設定

--- a/character.html
+++ b/character.html
@@ -5,14 +5,14 @@
     <body>
         <div class="divAllParent">
             <div class="divHeadmenu">
-                <div class="divHeadMenuButtonHome">
-                    HOME
-                </div>
-                <a href="character.html">
-                    <div class="divHeadMenuButtonCharacter">
-                        キャラクター
+                <a href="index.html">
+                    <div class="divHeadMenuButtonHome">
+                        HOME
                     </div>
                 </a>
+                <div class="divHeadMenuButtonCharacter">
+                    キャラクター
+                </div>
                 <a href="rule.html">
                     <div class="divHeadMenuButtonRule">
                         規約
@@ -27,7 +27,7 @@
         </div>
         <div class="divMain">
             <h1>
-                ホーム画面予定の場所 優先度3<br>
+                キャラクター紹介画面予定の場所 優先度4<br>
                 現在工事中！<br>
                 もう少し待っててね
             </h1>
