--- a/distribute.html
+++ b/distribute.html
@@ -5,9 +5,11 @@
     <body>
         <div class="divAllParent">
             <div class="divHeadmenu">
-                <div class="divHeadMenuButtonHome">
-                    HOME
-                </div>
+                <a href="index.html">
+                    <div class="divHeadMenuButtonHome">
+                        HOME
+                    </div>
+                </a>
                 <a href="character.html">
                     <div class="divHeadMenuButtonCharacter">
                         キャラクター
@@ -18,16 +20,14 @@
                         規約
                     </div>
                 </a>
-                <a href="distribute.html">
-                    <div class="divHeadMenuButtonDistribute">
-                        配布
-                    </div>
-                </a>
+                <div class="divHeadMenuButtonDistribute">
+                    配布
+                </div>
             </div>
         </div>
         <div class="divMain">
             <h1>
-                ホーム画面予定の場所 優先度3<br>
+                配布画面予定の場所 優先度2<br>
                 現在工事中！<br>
                 もう少し待っててね
             </h1>
