--- a/rule.html
+++ b/rule.html
@@ -5,19 +5,19 @@
     <body>
         <div class="divAllParent">
             <div class="divHeadmenu">
-                <div class="divHeadMenuButtonHome">
-                    HOME
-                </div>
+                <a href="index.html">
+                    <div class="divHeadMenuButtonHome">
+                        HOME
+                    </div>
+                </a>
                 <a href="character.html">
                     <div class="divHeadMenuButtonCharacter">
                         キャラクター
                     </div>
                 </a>
-                <a href="rule.html">
-                    <div class="divHeadMenuButtonRule">
-                        規約
-                    </div>
-                </a>
+                <div class="divHeadMenuButtonRule">
+                    規約
+                </div>
                 <a href="distribute.html">
                     <div class="divHeadMenuButtonDistribute">
                         配布
@@ -27,7 +27,7 @@
         </div>
         <div class="divMain">
             <h1>
-                ホーム画面予定の場所 優先度3<br>
+                規約画面予定の場所 優先度1<br>
                 現在工事中！<br>
                 もう少し待っててね
             </h1>
