ヘッダーのメニュー幅がぐにょんぐにょんしていたので修正

--- a/rule.html
+++ b/rule.html
@@ -6,21 +6,29 @@
         <div class="divAllParent">
             <div class="divHeadmenu">
                 <a href="index.html">
-                    <div class="divHeadMenuButtonHome">
-                        HOME
+                    <div class="divHeadMenuButtonCasing">
+                        <div class="divHeadMenuButtonHome">
+                            HOME
+                        </div>
                     </div>
                 </a>
                 <a href="character.html">
-                    <div class="divHeadMenuButtonCharacter">
-                        キャラクター
+                    <div class="divHeadMenuButtonCasing">
+                        <div class="divHeadMenuButtonCharacter">
+                            キャラクター
+                        </div>
                     </div>
                 </a>
-                <div class="divHeadMenuButtonRule">
-                    規約
+                <div class="divHeadMenuButtonCasing">
+                    <div class="divHeadMenuButtonRule">
+                        規約
+                    </div>
                 </div>
                 <a href="distribute.html">
-                    <div class="divHeadMenuButtonDistribute">
-                        配布
+                    <div class="divHeadMenuButtonCasing">
+                        <div class="divHeadMenuButtonDistribute">
+                            配布
+                        </div>
                     </div>
                 </a>
             </div>
