--- a/distribute.html
+++ b/distribute.html
@@ -6,22 +6,30 @@
         <div class="divAllParent">
             <div class="divHeadmenu">
                 <a href="index.html">
-                    <div class="divHeadMenuButtonHome">
-                        HOME
+                    <div class="divHeadMenuButtonCasing">
+                        <div class="divHeadMenuButtonHome">
+                            HOME
+                        </div>
                     </div>
                 </a>
                 <a href="character.html">
-                    <div class="divHeadMenuButtonCharacter">
-                        キャラクター
+                    <div class="divHeadMenuButtonCasing">
+                        <div class="divHeadMenuButtonCharacter">
+                            キャラクター
+                        </div>
                     </div>
                 </a>
                 <a href="rule.html">
-                    <div class="divHeadMenuButtonRule">
-                        規約
+                    <div class="divHeadMenuButtonCasing">
+                        <div class="divHeadMenuButtonRule">
+                            規約
+                        </div>
                     </div>
                 </a>
-                <div class="divHeadMenuButtonDistribute">
-                    配布
+                <div class="divHeadMenuButtonCasing">
+                    <div class="divHeadMenuButtonDistribute">
+                        配布
+                    </div>
                 </div>
             </div>
         </div>
