--- a/index.html
+++ b/index.html
@@ -5,22 +5,30 @@
     <body>
         <div class="divAllParent">
             <div class="divHeadmenu">
-                <div class="divHeadMenuButtonHome">
-                    HOME
+                <div class="divHeadMenuButtonCasing">
+                    <div class="divHeadMenuButtonHome">
+                        HOME
+                    </div>
                 </div>
                 <a href="character.html">
-                    <div class="divHeadMenuButtonCharacter">
-                        キャラクター
+                    <div class="divHeadMenuButtonCasing">
+                        <div class="divHeadMenuButtonCharacter">
+                            キャラクター
+                        </div>
                     </div>
                 </a>
                 <a href="rule.html">
-                    <div class="divHeadMenuButtonRule">
-                        規約
+                    <div class="divHeadMenuButtonCasing">
+                        <div class="divHeadMenuButtonRule">
+                            規約
+                        </div>
                     </div>
                 </a>
                 <a href="distribute.html">
-                    <div class="divHeadMenuButtonDistribute">
-                        配布
+                    <div class="divHeadMenuButtonCasing">
+                        <div class="divHeadMenuButtonDistribute">
+                            配布
+                        </div>
                     </div>
                 </a>
             </div>
