規約画面を完成。R-18規約用のリンクを張った。 規約の要約：常識的に使ってくれれば何してもいいよ……。 R-18規約はリンクだけ用意した。

--- a/rule.html
+++ b/rule.html
@@ -34,11 +34,90 @@
             </div>
         </div>
         <div class="divMain">
-            <h1>
-                規約画面予定の場所 優先度1<br>
-                現在工事中！<br>
-                もう少し待っててね
-            </h1>
+            長いですが、<b>必ず</b>この規約を読んで使ってください。
+            <div class="divRuleObj">
+                1.
+                <div class="divRuleObj">
+                    この規約に納得して、この規約を守ってくれる人以外は<b>使っちゃダメ</b>です。
+                </div>
+                2.
+                <div class="divRuleObj">
+                    この規約は、<b>「法に触れない」「作者(TIE)の地雷を踏まない」</b>という2目的のためにあります。そのため、作者を除く<b>すべての使用者</b>に適用されます。守ってね。
+                </div>
+                3.
+                <div class="divRuleObj">
+                    <b>何をやっちゃいけないか</b>の一覧です。<br>
+                    要約すると「『常識的に考えてやっちゃダメだろ』はダメ」です。<br>
+                </div>
+                <div class="divRuleObj">
+                    3.1.
+                    <div class="divRuleObj">
+                        <b>日本の法律でやっちゃいけないこと</b>はやっちゃダメです。
+                    </div>
+                    3.2.
+                    <div class="divRuleObj">
+                        音声は<b>その生成ソフト(MYCOEIROINK、UTAU等)の規約も守らなきゃダメ</b>です。
+                    </div>
+                    3.3.
+                    <div class="divRuleObj">
+                        <b>誰かを傷付けたりしちゃダメ</b>です。<br>
+                        特に<b>政治、宗教、犯罪、差別、恋愛、性交渉などの”<font color="#c00">取扱注意</font>”な話題</b>については、「 (当事者・加害者を含めて)誰も傷付けない」じゃないとダメです。君が加害者になる必要はないからね。
+                    </div>
+                    3.4.
+                    <div class="divRuleObj">
+                        <b>ゾーニングなしで上記”<font color="#c00">取扱注意</font>”</b>な利用をするのはダメです。
+                    </div>
+                    3.5.
+                    <div class="divRuleObj">
+                        <b>勝手に商用利用しちゃダメ</b>です。
+                    </div>
+                    3.6.
+                    <div class="divRuleObj">
+                        このサイトの<b>配布物全てについて二次配布はダメ</b>です。<br>
+                        <b>改造しててもダメ。</b>
+                    </div>
+                    3.7.
+                    <div class="divRuleObj">
+                        <b>TIEが悲しむ使い方をしちゃダメ</b>です。<br>
+                        作者(TIE)が何で悲しむかわからない？迷ったらやめときな……。
+                    </div>
+                    3.8.
+                    <div class="divRuleObj">
+                        その他、<b>公序良俗に反すること</b>はダメです。
+                    </div>
+                </div>
+                4.<br>
+                <div class="divRuleObj">
+                    <b>禁止事項を守った上で</b>なら、作者(TIE)に<b>聞かないでやっていい</b>ことです。<br>
+                </div>
+                <div class="divRuleObj">
+                    4.1.
+                    <div class="divRuleObj">
+                        <b>動画・絵・楽曲・小説等の創作</b>への利用→OK。
+                    </div>
+                    4.2.<br>
+                    <div class="divRuleObj">
+                        <b>非商用</b>の利用→OK。<br>
+                        <b>ニコニコのクリ奨、YouTubeの収益化、収益が微プラス程度の同人グッズ</b>なんかは好きにやってください。<br>
+                        あとできればご一報くだされば小躍りします。<small>ぴょこぴょこ</small>
+                    </div>
+                    4.3.<br>
+                    <div class="divRuleObj">
+                        <font color="#f0b"><b>R-18</b></font>利用は<b>専用の規約を守る限りOK</b>。<br>
+                        素敵な専用規約は<font color="#f0b"><b>ココ！</b></font>→<a href="./rule_R-18.html">■</a>。
+                    </div>
+                </div>
+                5.
+                <div class="divRuleObj">
+                    禁止事項に引っかかる内容についても、<b>作者(TIE)が許可した場合はOK</b>です。<br>
+                    その場合、見る人が許可済みの作品であることが分かるようにしてください。
+                </div>
+                6.
+                <div class="divRuleObj">
+                    なんかこれやばくね？とか、こういう使い方していい？とか、この規約気に食わないんだけど？とかあったら作者(TIE)に聞いてください。<br>
+                    ぼすきーの谷菟彩稚秉かTIEのアカウント宛にメンションするのが一番早いです。
+                </div>
+            </div>
         </div>
     </body>
 </html>
