規約内容に漏れがあったので修正。 ・利用サービスの規約も守る項目を追加 ・AI等非想定用途への利用を禁止する項目を追加

--- a/rule.html
+++ b/rule.html
@@ -35,6 +35,7 @@
         </div>
         <div class="divMain">
             長いですが、<b>必ず</b>この規約を読んで使ってください。
+            <br>
             <div class="divRuleObj">
                 1.
                 <div class="divRuleObj">
@@ -56,12 +57,14 @@
                     </div>
                     3.2.
                     <div class="divRuleObj">
-                        音声は<b>その生成ソフト(MYCOEIROINK、UTAU等)の規約も守らなきゃダメ</b>です。
+                        音声を使う場合は、<b>その生成ソフト(MYCOEIROINK、UTAU等)の規約も守らなきゃダメ</b>です。<br>
+                        同様に、動画投稿サイト等を利用する場合は、<b>利用するサービスの規約も守らなきゃダメ</b>です。
                     </div>
                     3.3.
                     <div class="divRuleObj">
                         <b>誰かを傷付けたりしちゃダメ</b>です。<br>
-                        特に<b>政治、宗教、犯罪、差別、恋愛、性交渉などの”<font color="#c00">取扱注意</font>”な話題</b>については、「 (当事者・加害者を含めて)誰も傷付けない」じゃないとダメです。君が加害者になる必要はないからね。
+                        特に<b>政治、宗教、犯罪、差別、恋愛、性交渉などの”<font color="#c00">取扱注意</font>”な話題</b>については、<br>
+                        「 (当事者・加害者を含めて)誰も傷付けない」じゃないとダメです。君が加害者になる必要はないからね。
                     </div>
                     3.4.
                     <div class="divRuleObj">
@@ -69,19 +72,23 @@
                     </div>
                     3.5.
                     <div class="divRuleObj">
-                        <b>勝手に商用利用しちゃダメ</b>です。
+                        当サイト、および当サイトの配布物を、<b>AI学習等「本来想定されていない用途」に利用するのはダメ</b>です。
                     </div>
                     3.6.
+                    <div class="divRuleObj">
+                        <b>勝手に商用利用しちゃダメ</b>です。
+                    </div>
+                    3.7.
                     <div class="divRuleObj">
                         このサイトの<b>配布物全てについて二次配布はダメ</b>です。<br>
                         <b>改造しててもダメ。</b>
                     </div>
-                    3.7.
+                    3.8.
                     <div class="divRuleObj">
                         <b>TIEが悲しむ使い方をしちゃダメ</b>です。<br>
                         作者(TIE)が何で悲しむかわからない？迷ったらやめときな……。
                     </div>
-                    3.8.
+                    3.9.
                     <div class="divRuleObj">
                         その他、<b>公序良俗に反すること</b>はダメです。
                     </div>
