R-18用の利用規約を更新。 性癖に合わないものへの自衛を全開にしてしまった。でも苦手なんだからしょうがないじゃないか…… また、それに合わせて推奨シチュリストも作成。拡充を目指す。

--- a/rule.html
+++ b/rule.html
@@ -43,7 +43,7 @@
                 </div>
                 2.
                 <div class="divRuleObj">
-                    この規約は、<b>「法に触れない」「作者(TIE)の地雷を踏まない」</b>という2目的のためにあります。そのため、作者を除く<b>すべての使用者</b>に適用されます。守ってね。
+                    この規約は、<b>「法に触れない」「作者(TIE)の地雷を踏まない」</b>という2目的のためにあります。そのため、作者(TIE)を除く<b>すべての使用者</b>に適用されます。守ってね。
                 </div>
                 3.
                 <div class="divRuleObj">
@@ -68,11 +68,12 @@
                     </div>
                     3.4.
                     <div class="divRuleObj">
-                        <b>ゾーニングなしで上記”<font color="#c00">取扱注意</font>”</b>な利用をするのはダメです。
+                        <b>ゾーニングなしで上記”<font color="#c00">取扱注意</font>”な利用をするのはダメ</b>です。
                     </div>
                     3.5.
                     <div class="divRuleObj">
-                        当サイト、および当サイトの配布物を、<b>AI学習等「本来想定されていない用途」に利用するのはダメ</b>です。
+                        当サイト、および当サイトの配布物を、<b>AI学習等「本来想定されていない用途」に利用するのはダメ</b>です。<br>
+                        「本来想定されている用途」は配布ページで説明してあります。
                     </div>
                     3.6.
                     <div class="divRuleObj">
@@ -85,7 +86,7 @@
                     </div>
                     3.8.
                     <div class="divRuleObj">
-                        <b>TIEが悲しむ使い方をしちゃダメ</b>です。<br>
+                        <b>作者(TIE)が悲しむ使い方をしちゃダメ</b>です。<br>
                         作者(TIE)が何で悲しむかわからない？迷ったらやめときな……。
                     </div>
                     3.9.
@@ -110,14 +111,14 @@
                     </div>
                     4.3.<br>
                     <div class="divRuleObj">
-                        <font color="#f0b"><b>R-18</b></font>利用は<b>専用の規約を守る限りOK</b>。<br>
+                        <font color="#f0b"><b>R-18、紳士向け等</b></font>への利用は<b>専用の規約を守る限りOK</b>。<br>
                         素敵な専用規約は<font color="#f0b"><b>ココ！</b></font>→<a href="./rule_R-18.html">■</a>。
                     </div>
                 </div>
                 5.
                 <div class="divRuleObj">
                     禁止事項に引っかかる内容についても、<b>作者(TIE)が許可した場合はOK</b>です。<br>
-                    その場合、見る人が許可済みの作品であることが分かるようにしてください。
+                    その場合、<b>見る人が許可済みの作品であることが分かるようにしてください</b>。
                 </div>
                 6.
                 <div class="divRuleObj">
