配布ページを作成 MYCOEIROINKとUTAU連続音C5、ともにv1配布開始！

--- a/distribute.html
+++ b/distribute.html
@@ -34,11 +34,31 @@
             </div>
         </div>
         <div class="divMain">
-            <h1>
-                配布画面予定の場所 優先度2<br>
-                現在工事中！<br>
-                もう少し待っててね
-            </h1>
+            <br>
+            ダウンロード前に<a href="rule.html">規約</a>をよーくご確認ください！<br>
+            <div class="divDistributeContainerMYCOE">
+                <div class="divDistributeContainerItem">
+                    <h1><b>MYCOEIROINK 谷菟彩稚秉</b><br></h1>
+                    <b>MYCOEIROINK 谷菟彩稚秉</b>は、COEIROINKによる音声合成を想定用途とした女声合成音声ライブラリです。<br>
+                    中の人は作者(TIE)にボイスチェンジャーをかけたものになります。<br>
+                    コーパスには<a href="https://github.com/mmorise/ita-corpus">ITAコーパス</a>のEMOTIONとRECITATION、および<a href="https://github.com/shirowanisan/coeiroink-corpus-manager/tree/main/mana-corpus">MANAコーパス</a>を使用しました。<br>
+                    現在、のーまるスタイルのみが実装されています。<br>
+                    <br>
+                    配布場所→<a href="https://drive.google.com/file/d/1-dJzNZOxmpx5kl8u4Ms_lFxQTE3eVh37/view?usp=sharing">■</a><br>
+                    現在の最新バージョンはv1です。<br>
+                </div>
+            </div>
+            <div class="divDistributeContainerUTAU">
+                <div class="divDistributeContainerItem">
+                    <h1><b>UTAU 谷菟彩稚秉 連続音</b></h1><br>
+                    <b>UTAU 谷菟彩稚秉 連続音</b>は、UTAUによる歌唱音声合成を用途とした女声合成音声ライブラリです。<br>
+                    中の人は作者(TIE)にボイスチェンジャーをかけたものになります。<br>
+                    録音リストには「巽式8モーラ連続音改変リスト_ふつう」を用いており、音源高はC5です。<br>
+                    <br>
+                    配布場所→<a href="https://drive.google.com/file/d/1_3nGMBAM5iKsK6QRvS4rJeGHfV0eRkNg/view?usp=sharing">■</a><br>
+                    現在の最新バージョンはv1です。<br>
+                </div>
+            </div>
         </div>
     </body>
 </html>
