HPの優先順位を変更 top>charactorをcharactor>topに

--- a/rule.html
+++ b/rule.html
@@ -43,7 +43,8 @@
                 </div>
                 2.
                 <div class="divRuleObj">
-                    この規約は、<b>「法に触れない」「作者(TIE)の地雷を踏まない」</b>という2目的のためにあります。そのため、作者(TIE)を除く<b>すべての使用者</b>に適用されます。守ってね。
+                    この規約は、<b>「法に触れない」「作者(TIE)の地雷を踏まない」</b>という2目的のためにあります。<br>
+                    そのため、作者(TIE)を除く<b>すべての使用者</b>に適用されます。守ってね。
                 </div>
                 3.
                 <div class="divRuleObj">
