放置されてたところをいろいろ追加 2025/9/8アップデート分。 ・ホームページ完成 ・キャラクター紹介ページ完成 ・配布ページに流、潺、立ち絵(SD)、公式ロゴを追加 　・URLは未記載なので必ず配布前にもう一回Commit入れる

--- a/character.html
+++ b/character.html
@@ -1,44 +1,99 @@
 <html lang="ja">
-    <head>
-        <link href="./template.css" rel="stylesheet" />
-    </head>
-    <body>
-        <div class="divAllParent">
-            <div class="divHeadmenu">
-                <a href="index.html">
-                    <div class="divHeadMenuButtonCasing">
-                        <div class="divHeadMenuButtonHome">
-                            HOME
-                        </div>
-                    </div>
-                </a>
-                <div class="divHeadMenuButtonCasing">
-                    <div class="divHeadMenuButtonCharacter">
-                        キャラクター
-                    </div>
-                </div>
-                <a href="rule.html">
-                    <div class="divHeadMenuButtonCasing">
-                        <div class="divHeadMenuButtonRule">
-                            規約
-                        </div>
-                    </div>
-                </a>
-                <a href="distribute.html">
-                    <div class="divHeadMenuButtonCasing">
-                        <div class="divHeadMenuButtonDistribute">
-                            配布
-                        </div>
-                    </div>
-                </a>
-            </div>
-        </div>
-        <div class="divMain">
-            <h1>
-                キャラクター紹介画面予定の場所 優先度3<br>
-                現在工事中！<br>
-                もう少し待っててね
-            </h1>
-        </div>
-    </body>
+	<head>
+		<link href="./template.css" rel="stylesheet" />
+	</head>
+	<body>
+		<div class="divAllParent">
+			<div class="divHeadmenu">
+				<a href="index.html">
+					<div class="divHeadMenuButtonCasing">
+						<div class="divHeadMenuButtonHome">
+							HOME
+						</div>
+					</div>
+				</a>
+				<div class="divHeadMenuButtonCasing">
+					<div class="divHeadMenuButtonCharacter">
+						キャラクター
+					</div>
+				</div>
+				<a href="rule.html">
+					<div class="divHeadMenuButtonCasing">
+						<div class="divHeadMenuButtonRule">
+							規約
+						</div>
+					</div>
+				</a>
+				<a href="distribute.html">
+					<div class="divHeadMenuButtonCasing">
+						<div class="divHeadMenuButtonDistribute">
+							配布
+						</div>
+					</div>
+				</a>
+			</div>
+		</div>
+		<div class="divMain">
+			<div class="divCharacterTieMain">
+				<div class="divCharacterTieContent">
+					<div class="divCharacterDescription">
+						<div class="divCharacterDescriptionContent">
+							<b>
+								<h2>
+									谷菟彩稚秉
+								</h2>
+							</b>
+							<div class="divCharacterDescriptionContent">
+								種族：<span class="spanRedColor">原鳥類ですよ？</span><br>
+								性別：不明(一般には女性扱い)　<span class="spanRedColor">そうなんですか？</span><br>
+								年齢：<span class="spanRedColor">ヒミツでーす！</span><br>
+								身長：150cm (127cmという情報アリ。可変？不明)　<span class="spanRedColor">ふふーん♪</span><br>
+								<br>
+								好きなもの：
+								<ul class="ulNonPadding">
+									<li>きれいな水</li>
+									<li>草花の多い場所</li>
+									<li>甘い食べもの</li>
+									<li>優しい人</li>
+									<li>かわいいもの</li>
+									<li>かっこいいもの</li>
+								</ul>
+								嫌いなもの：
+								<ul class="ulNonPadding">
+									<li>汚いもの</li>
+									<li>好きを邪魔するもの</li>
+									<li>下心のある人</li>
+									<li>こわいもの</li>
+									<li>辛い・苦い食べもの</li>
+								</ul>
+								<div class="divCharacterHiddenLinkCasing">
+									<div class="divCharacterHiddenLink">
+										<a class="aCharacterHiddenLink" href="./character_tie_7a1a79c9.html">
+											夢を見る
+										</a>
+									</div>
+								</div>
+								<br>
+								神出鬼没の少女。見た人の正気を失わせるほど美しい。<br>
+								森の中や川の近くなど、自然の多い場所での目撃例が多い。<br>
+								<br>
+								かなり古くから存在しているようで、<span class="spanRedColor">ひみつ！</span>の文献にも記述がある。そのどれもが「水色の髪、星の瞳をした少女」として、人と触れ合っていたことを記している。<br>
+								現代で実際に会った人への聞き取り調査では、仲良くなるためには、何度も出会い、会話や食事を共にすることが近道のようだ。そしてその際には、邪心を持たず、純粋な心で接することが最も大切なようだ。そうして仲良くなれば、多少の願いを叶えてくれたり、花を咲かせる、料理を作る、急に現れて悪戯するなど、かなり人懐っこく接してくれるようだ。<br>
+								ただし、彼女は決して温厚なだけではない。自身に敵対的な相手（特に自身と仲のいい人を傷付けるもの）に対しては目を朱くして攻撃性を露にし、場合によってはその命まで脅かす。攻撃方法については、袖から刀を取り出した、<span class="spanRedColor"><s>　　　　　　　　　　</s>ネタバレはだめですよー♪<s>　　　　　　　　　　</s></span>……など、かなり多彩なようだ。<br>
+								彼女は恐ろしくもあるが、それは決して浅慮に振るわれはしない。恐ろしくない彼女は人に非常に優しく、温厚だ。彼女を怒らせることなく、ただ仲良く接すれば、きっといい生涯を過ごせるだろう。<br>
+								<br>
+								余談だが、壁画には彼女と共に紫髪の少女が描かれている例が散見される。彼女についての情報も、現在調査中だ。<br>
+								<br>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="divCharacterTieContent">
+					<div class="divCharacterIllust">
+						<img src="res/tie_yatoiro.png">
+					</div>
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
