--- a/distribute.html
+++ b/distribute.html
@@ -1,64 +1,168 @@
 <html lang="ja">
-    <head>
-        <link href="./template.css" rel="stylesheet" />
-    </head>
-    <body>
-        <div class="divAllParent">
-            <div class="divHeadmenu">
-                <a href="index.html">
-                    <div class="divHeadMenuButtonCasing">
-                        <div class="divHeadMenuButtonHome">
-                            HOME
-                        </div>
-                    </div>
-                </a>
-                <a href="character.html">
-                    <div class="divHeadMenuButtonCasing">
-                        <div class="divHeadMenuButtonCharacter">
-                            キャラクター
-                        </div>
-                    </div>
-                </a>
-                <a href="rule.html">
-                    <div class="divHeadMenuButtonCasing">
-                        <div class="divHeadMenuButtonRule">
-                            規約
-                        </div>
-                    </div>
-                </a>
-                <div class="divHeadMenuButtonCasing">
-                    <div class="divHeadMenuButtonDistribute">
-                        配布
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="divMain">
-            <br>
-            ダウンロード前に<a href="rule.html">規約</a>をよーくご確認ください！<br>
-            <div class="divDistributeContainerMYCOE">
-                <div class="divDistributeContainerItem">
-                    <h1><b>MYCOEIROINK 谷菟彩稚秉</b><br></h1>
-                    <b>MYCOEIROINK 谷菟彩稚秉</b>は、COEIROINKによる音声合成を想定用途とした女声合成音声ライブラリです。<br>
-                    中の人は作者(TIE)にボイスチェンジャーをかけたものになります。<br>
-                    コーパスには<a href="https://github.com/mmorise/ita-corpus">ITAコーパス</a>のEMOTIONとRECITATION、および<a href="https://github.com/shirowanisan/coeiroink-corpus-manager/tree/main/mana-corpus">MANAコーパス</a>を使用しました。<br>
-                    現在、のーまるスタイルのみが実装されています。<br>
-                    <br>
-                    配布場所→<a href="https://drive.google.com/file/d/1-dJzNZOxmpx5kl8u4Ms_lFxQTE3eVh37/view?usp=sharing">■</a><br>
-                    現在の最新バージョンはv1です。<br>
-                </div>
-            </div>
-            <div class="divDistributeContainerUTAU">
-                <div class="divDistributeContainerItem">
-                    <h1><b>UTAU 谷菟彩稚秉 連続音</b></h1><br>
-                    <b>UTAU 谷菟彩稚秉 連続音</b>は、UTAUによる歌唱音声合成を用途とした女声合成音声ライブラリです。<br>
-                    中の人は作者(TIE)にボイスチェンジャーをかけたものになります。<br>
-                    録音リストには「巽式8モーラ連続音改変リスト_ふつう」を用いており、音源高はC5です。<br>
-                    <br>
-                    配布場所→<a href="https://drive.google.com/file/d/1_3nGMBAM5iKsK6QRvS4rJeGHfV0eRkNg/view?usp=sharing">■</a><br>
-                    現在の最新バージョンはv1です。<br>
-                </div>
-            </div>
-        </div>
-    </body>
+	<head>
+		<link href="./template.css" rel="stylesheet" />
+	</head>
+	<body>
+		<div class="divAllParent">
+			<div class="divHeadmenu">
+				<a href="index.html">
+					<div class="divHeadMenuButtonCasing">
+						<div class="divHeadMenuButtonHome">
+							HOME
+						</div>
+					</div>
+				</a>
+				<a href="character.html">
+					<div class="divHeadMenuButtonCasing">
+						<div class="divHeadMenuButtonCharacter">
+							キャラクター
+						</div>
+					</div>
+				</a>
+				<a href="rule.html">
+					<div class="divHeadMenuButtonCasing">
+						<div class="divHeadMenuButtonRule">
+							規約
+						</div>
+					</div>
+				</a>
+				<div class="divHeadMenuButtonCasing">
+					<div class="divHeadMenuButtonDistribute">
+						配布
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="divMain">
+			<br>
+			ダウンロード前に<a href="rule.html">規約</a>をよーくご確認ください！<br>
+			<div class="divDistributeContainerMYCOE">
+				<div class="divDistributeContainerItem">
+					<h1><b>MYCOEIROINK 谷菟彩稚秉 澪</b><br></h1>
+					<b>MYCOEIROINK 谷菟彩稚秉 澪</b>は、COEIROINKによる音声合成を想定用途とした女声合成音声ライブラリです。<br>
+					他スタイルと比較すると、朗読のようなハキハキした声が作成可能です。非常にベーシックな谷菟彩稚秉ボイスになっています。<br>
+					中の人は音源管理者(TIE)にボイスチェンジャーをかけたものになります。<br>
+					コーパスには<a href="https://github.com/mmorise/ita-corpus">ITAコーパス</a>のEMOTIONとRECITATION、および<a href="https://github.com/shirowanisan/coeiroink-corpus-manager/tree/main/mana-corpus">MANAコーパス</a>を使用しました。<br>
+					<br>
+					想定用途
+					<ul>
+						<li>谷菟彩稚秉の二次創作としての動画、音声作品に用いるため、調声および軽微な加工をして素材として用いること。<br>
+						※形態を問わず、キャラクター「谷菟彩稚秉」としての利用を想定しています。
+					</ul>
+					<br>
+					配布場所→<a href="https://drive.google.com/file/d/1-dJzNZOxmpx5kl8u4Ms_lFxQTE3eVh37/view?usp=sharing">■</a><br>
+					現在の最新バージョンはv1.1です。<br>
+					<br>
+					更新履歴<br>
+					(2024/06/20) v1.0 配布開始<br>
+					(2025/09/08) v1.1 名称を「MYCOEIROINK 谷菟彩稚秉」から「MYCOEIROINK 谷菟彩稚秉 澪」に変更。<br>
+				</div>
+			</div>
+			<div class="divDistributeContainerMYCOE">
+				<div class="divDistributeContainerItem">
+					<h1><b>MYCOEIROINK 谷菟彩稚秉 流</b><br></h1>
+					<b>MYCOEIROINK 谷菟彩稚秉 流</b>は、COEIROINKによる音声合成を想定用途とした女声合成音声ライブラリです。<br>
+					読みやすいコーパス文のみを用いることで、より流暢で、日常的な会話のような声を目指しました。<br>
+					中の人は音源管理者(TIE)にボイスチェンジャーをかけたものになります。<br>
+					<span class="spanRuleRed">使用には「谷菟彩稚秉 澪」が必要です。使用方法はReadmeに記載がありますので、必ず従ってください。</span><br>
+					コーパスには<a href="https://github.com/mmorise/ita-corpus">ITAコーパス</a>のEMOTION、および<a href="https://github.com/shirowanisan/coeiroink-corpus-manager/tree/main/mana-corpus">MANAコーパス</a>を使用しました。<br>
+					<br>
+					想定用途
+					<ul>
+						<li>谷菟彩稚秉の二次創作としての動画、音声作品に用いるため、調声および軽微な加工をして素材として用いること。<br>
+						※形態を問わず、キャラクター「谷菟彩稚秉」としての利用を想定しています。
+					</ul>
+					<br>
+					配布場所→<a href="ここにURLを入れます">■</a><br>
+					現在の最新バージョンはv1.0です。<br>
+					<br>
+					更新履歴<br>
+					(2025/09/08) v1.0 配布開始<br>
+				</div>
+			</div>
+			<div class="divDistributeContainerMYCOE">
+				<div class="divDistributeContainerItem">
+					<h1><b>MYCOEIROINK 谷菟彩稚秉 潺</b><br></h1>
+					<b>MYCOEIROINK 谷菟彩稚秉 潺</b>は、COEIROINKによる音声合成を想定用途とした女声合成音声ライブラリです。<br>
+					読みやすいコーパス文を囁き声で読み上げることで、囁き会話に近い声になっています。また、澪の声と音高を合わせるため、ボイスチェンジャーの設定がやや異なります。<br>
+					中の人は音源管理者(TIE)にボイスチェンジャーをかけたものになります。<br>
+					<span class="spanRuleRed">使用には「谷菟彩稚秉 澪」が必要です。使用方法はReadmeに記載がありますので、必ず従ってください。</span><br>
+					コーパスには<a href="https://github.com/shirowanisan/coeiroink-corpus-manager/tree/main/mana-corpus">MANAコーパス</a>を使用しました。<br>
+					<br>
+					想定用途
+					<ul>
+						<li>谷菟彩稚秉の二次創作としての動画、音声作品に用いるため、調声および軽微な加工をして素材として用いること。<br>
+						※形態を問わず、キャラクター「谷菟彩稚秉」としての利用を想定しています。
+					</ul>
+					<br>
+					配布場所→<a href="ここにURLを入れます">■</a><br>
+					現在の最新バージョンはv1です。<br>
+					<br>
+					更新履歴<br>
+					(2025/09/08) v1.0 配布開始<br>
+				</div>
+			</div>
+			<div class="divDistributeContainerUTAU">
+				<div class="divDistributeContainerItem">
+					<h1><b>UTAU 谷菟彩稚秉 連続音</b></h1><br>
+					<b>UTAU 谷菟彩稚秉 連続音</b>は、UTAUによる歌唱音声合成を用途とした女声合成音声ライブラリです。<br>
+					中の人は音源管理者(TIE)にボイスチェンジャーをかけたものになります。<br>
+					録音リストには「巽式8モーラ連続音改変リスト_ふつう」を用いており、音源高はC5です。<br>
+					<br>
+					想定用途
+					<ul>
+						<li>谷菟彩稚秉の二次創作としての動画、音声作品に用いるため、調声および軽微な加工をして素材として用いること。<br>
+						※形態を問わず、キャラクター「谷菟彩稚秉」としての利用を想定しています。
+					</ul>
+					<br>
+					配布場所→<a href="https://drive.google.com/file/d/1_3nGMBAM5iKsK6QRvS4rJeGHfV0eRkNg/view?usp=sharing">■</a><br>
+					現在の最新バージョンはv1です。<br>
+					<br>
+					更新履歴<br>
+					(2024/06/20) v1.0 配布開始<br>
+				</div>
+			</div>
+			<div class="divDistributeContainerIllust">
+				<div class="divDistributeContainerItem">
+					<h1><b>谷菟彩稚秉立ち絵(SD)</b></h1><br>
+					<b>谷菟彩稚秉立ち絵(SD)</b>は、たぬざか様に作成いただいた公式監修立ち絵です。<br>
+					動画、静止画の作成等にご活用いただけますと嬉しいです。<br>
+					<br>
+					想定用途
+					<ul>
+						<li>谷菟彩稚秉の二次創作としての動画、静止画に用いるため、軽微な加工をして素材として用いること。<br>
+						※形態を問わず、キャラクター「谷菟彩稚秉」としての利用を想定しています。
+					</ul>
+					<br>
+					配布場所→<a href="ここにURLを入れます">■</a><br>
+					現在の最新バージョンはv1です。<br>
+					<br>
+					更新履歴<br>
+					(2025/09/08) v1.0 配布開始<br>
+				</div>
+			</div>
+			<div class="divDistributeContainerIllust">
+				<div class="divDistributeContainerItem">
+					<h1><b>谷菟彩稚秉公式ロゴ</b></h1><br>
+					<b>谷菟彩稚秉公式ロゴ</b>は、音源管理者(TIE)が作成した、谷菟彩稚秉を表すロゴ画像です。<br>
+					そこそこ大きめサイズなため、S、M、Lの3サイズが同梱されています。<br>
+					動画、静止画の作成等にご活用いただけますと嬉しいです。<br>
+					<br>
+					想定用途
+					<ul>
+						<li>谷菟彩稚秉の二次創作としての動画、静止画に用いるため、軽微な加工をして素材として用いること。<br>
+						※形態を問わず、キャラクター「谷菟彩稚秉」としての利用を想定しています。
+						<li>このロゴには「谷菟彩稚秉」の文字が含まれるため、ロゴ単体で「谷菟彩稚秉」としてのクレジットと見做します。<br>
+						どうしても文字でクレジットしたくない場合等にご活用ください。
+					</ul>
+					<br>
+					配布場所→<a href="ここにURLを入れます">■</a><br>
+					現在の最新バージョンはv1です。<br>
+					<br>
+					更新履歴<br>
+					(2025/09/08) v1.0 配布開始<br>
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
