--- a/index.html
+++ b/index.html
@@ -1,44 +1,70 @@
 <html lang="ja">
-    <head>
-        <link href="./template.css" rel="stylesheet" />
-    </head>
-    <body>
-        <div class="divAllParent">
-            <div class="divHeadmenu">
-                <div class="divHeadMenuButtonCasing">
-                    <div class="divHeadMenuButtonHome">
-                        HOME
-                    </div>
-                </div>
-                <a href="character.html">
-                    <div class="divHeadMenuButtonCasing">
-                        <div class="divHeadMenuButtonCharacter">
-                            キャラクター
-                        </div>
-                    </div>
-                </a>
-                <a href="rule.html">
-                    <div class="divHeadMenuButtonCasing">
-                        <div class="divHeadMenuButtonRule">
-                            規約
-                        </div>
-                    </div>
-                </a>
-                <a href="distribute.html">
-                    <div class="divHeadMenuButtonCasing">
-                        <div class="divHeadMenuButtonDistribute">
-                            配布
-                        </div>
-                    </div>
-                </a>
-            </div>
-        </div>
-        <div class="divMain">
-            <h1>
-                ホーム画面予定の場所 優先度4<br>
-                現在工事中！<br>
-                もう少し待っててね
-            </h1>
-        </div>
-    </body>
+	<head>
+		<link href="./template.css" rel="stylesheet" />
+	</head>
+	<body>
+		<div class="divAllParent">
+			<div class="divHeadmenu">
+				<div class="divHeadMenuButtonCasing">
+					<div class="divHeadMenuButtonHome">
+						HOME
+					</div>
+				</div>
+				<a href="character.html">
+					<div class="divHeadMenuButtonCasing">
+						<div class="divHeadMenuButtonCharacter">
+							キャラクター
+						</div>
+					</div>
+				</a>
+				<a href="rule.html">
+					<div class="divHeadMenuButtonCasing">
+						<div class="divHeadMenuButtonRule">
+							規約
+						</div>
+					</div>
+				</a>
+				<a href="distribute.html">
+					<div class="divHeadMenuButtonCasing">
+						<div class="divHeadMenuButtonDistribute">
+							配布
+						</div>
+					</div>
+				</a>
+			</div>
+		</div>
+		<div class="divMain">
+			<div class="divIndexMain">
+				<img src="res/tie_yatoiro_logo_SizeS.png"><br>
+				<h3>
+					谷菟彩稚秉と関連キャラクターの素材配布、及びキャラクター紹介等のためのHPです。<br>
+					平成を感じる古風なHPですが、楽しんでいっていただければ嬉しいです。<br>
+				</h3>
+			</div>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<div class="divIndexSignatCasing">
+				<div class="divIndexSignatSpacer">
+				<br>
+				</div>
+				<div class="divIndexSignatTitle">
+					HP管理者：<br>
+					連絡先：<br>
+					<br>
+					<br>
+					<br>
+				</div>
+				<div class="divIndexSignat">
+					TIE<br>
+					https://voskey.icalo.net/@ya10iro_tie<br>
+					https://voskey.icalo.net/@tieazukayo486<br>
+					https://misskey.io/@tieazukayo486<br>
+					https://x.com/tieria_douga_ny<br>
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
