--- a/rule_R-18.html
+++ b/rule_R-18.html
@@ -1,198 +1,198 @@
 <html lang="ja">
-    <head>
-        <link href="./template.css" rel="stylesheet" />
-    </head>
-    <body>
-        <div class="divAllParent">
-            <div class="divHeadmenu">
-                <a href="index.html">
-                    <div class="divHeadMenuButtonCasing">
-                        <div class="divHeadMenuButtonHome">
-                            HOME
-                        </div>
-                    </div>
-                </a>
-                <a href="character.html">
-                    <div class="divHeadMenuButtonCasing">
-                        <div class="divHeadMenuButtonCharacter">
-                            キャラクター
-                        </div>
-                    </div>
-                </a>
-                <div class="divHeadMenuButtonCasing">
-                    <div class="divHeadMenuButtonRule">
-                        規約
-                    </div>
-                </div>
-                <a href="distribute.html">
-                    <div class="divHeadMenuButtonCasing">
-                        <div class="divHeadMenuButtonDistribute">
-                            配布
-                        </div>
-                    </div>
-                </a>
-            </div>
-        </div>
-        <div class="divMain">
-            通常の規約はこっち→<a href="rule.html">■</a><br>
-            <br>
-            <br>
-            <div class="divRuleObj">
-                1.
-                <div class="divRuleObj">
-                    この規約に納得し、この規約を守らない限り、<b>R-18類には使っちゃダメ</b>です。<br>
-                    なお、この規約における「R-18類」という表現は、<b>厳密なR-18およびR-18Gの利用だけでなく、紳士向けやボイロAVといったR-17、R-17.9……なものまで含めたすべて</b>を指します。
-                </div>
-                2.
-                <div class="divRuleObj">
-                    この規約は、<b>「法に触れない」「作者(TIE)の地雷を踏まない」</b>という2目的のためにあります。<br>
-                    そのため、作者(TIE)を除く<b>すべての使用者</b>に適用されます。守ってね。
-                </div>
-                3.
-                <div class="divRuleObj">
-                    通常利用に関する規約で禁止している事項は<b>R-18類への利用においても当然ダメ</b>です。
-                </div>
-                4.
-                <div class="divRuleObj">
-                    適切な<b>ゾーニングなしにこれらの作品を公開するのは絶対ダメ</b>です。警察出てきちゃうからね。<br>
-                    適切なゾーニングがわからなければ、タイトルに入れる、サムネイルに入れる、説明文に入れる、タグを付ける等を可能な限り行ってください。
-                </div>
-                5.
-                <div class="divRuleObj">
-                    項目6および7は、<b>非常に直球な内容が書かれている「作者(TIE)の地雷リストと性癖リスト」</b>です。<br>
-                    これを目にしたくない場合、<b>「直接性的な行為をしない・されない、またその現場に居合わせない、黒幕やモブ等の登場人物」</b>のみに限定してR-18類への利用を行ってください。
-                </div>
-                6.
-                <div class="divRuleObj">
-                    この項目は、<b>当サイトのキャラクター達への禁止行為</b>（すなわち作者(TIE)の地雷性癖）を列挙する項目です。<br>
-                    厳密には「ジャンル自体は地雷じゃないけど、ジャンル内にある特に名称のない派閥が特大の地雷」というものも含みます。逆に、自覚していない地雷については把握していないので、これから増える可能性もあります。<br>
-                    「これらの性癖を否定するもの」ではなく、「作者(TIE)の精神的健康のための自衛行為」であることをご理解ください。<br>
-                    また、繰り返しになりますが、<b>直球な表現</b>が発生します。見たくない場合は項目5の許諾項目のみの利用に留めてください。
-                </div>
-                <div class="divRuleObj">
-                    6.1.
-                    <div class="divRuleObj">
-                        当サイトのキャラクターが<b>被害者の場合だけでなく、加害者やモブの場合も含め、とにかく絶対にダメ</b>！というものです。
-                    </div>
-                    <div class="divRuleObj">
-                        6.1.1.
-                        <div class="divRuleObj">
-                            <b>汚物</b>の表現。<br>
-                            特にスカトロ(糞、尿、屁、その他排泄物全て)、吐瀉物等は本当にダメです。同様に、強烈な悪臭についても苦手です。排泄・吐瀉等の行為共々、<b>共存することを禁止</b>します。
-                        </div>
-                        6.1.2.
-                        <div class="divRuleObj">
-                            <b>ゴア</b>表現・<b>グロテスク</b>表現。<br>
-                            達磨などの欠損表現および、大怪我や失血死といった多量の流血表現を禁じます。<small>まあ当サイトの子達は全員人間じゃないので赤い血は出ませんが……</small><br>
-                            ただし、軽い傷のような小規模な流血や、流血の全くないゴア表現であれば問題ありません。例として、谷菟彩稚秉は人間の一部を木化させて切り落とすような攻撃が可能ですが、<b>流血はしないので問題ありません</b>。
-                        </div>
-                        6.1.3.
-                        <div class="divRuleObj">
-                            <b>ハラスメント</b>行為。<br>
-                            セクハラやパワハラなど、<b>本人が嫌がるようなことをしないであげて</b>ください。暴れると大変なことになります。<br>
-                            ただ、愛し合う相手とボディタッチするなど、<b>ハラスメントでないものについては当然問題ありません</b>。
-                        </div>
-                    </div>
-                    6.2.
-                    <div class="divRuleObj">
-                        当サイトの子達が被害者になる場合についてのみの禁止事項です。<br>
-                        同時に登場する他キャラクターに対しては適用されません。
-                    </div>
-                    <div class="divRuleObj">
-                        6.1.1.
-                        <div class="divRuleObj">
-                            <b>ラバースーツを脱がす</b>こと。<br>
-                            当サイトのキャラクターは全員ラバースーツが肌そのものであり、当然原理的に脱ぐことができず、その下にも肌色の肌はありません。というか肌がありません。<b>犯したい場合はラバースーツの上からヤってください</b>。
-                        </div>
-                        6.2.2.
-                        <div class="divRuleObj">
-                            <b>口淫</b>行為。<br>
-                            フェラや食ザーなどを禁止します。作者(TIE)が「物を口に入れる」ということについて過度に神聖視しているためです。ご理解ください。
-                        </div>
-                        6.2.3.
-                        <div class="divRuleObj">
-                            <b>愛のない</b>性行為。<br>
-                            乱交やレイプ等の表現は禁止です。<br>
-                            そもそも谷菟彩家は全員そういうものを嫌いますし、実際にそうなれば相手を容赦なく殺害する子ばかりです。
-                        </div>
-                        6.2.4.
-                        <div class="divRuleObj">
-                            <b>精液風呂</b>や<b>精液染み服</b>、およびその類似表現。<br>
-                            精液溜まりに漬けたり、精液の塊をぶつけたり、精液を染み込ませた服を着せたり……などは上記6.1.1.の異臭の禁止に引っかかります。ご理解ください。
-                        </div>
-                        6.2.5.
-                        <div class="divRuleObj">
-                            <b>無様</b>系。<br>
-                            落書き、鼻フック、着ぐるみ、(外部干渉による)能力弱体化、敗北調教、変脳、肥満化、巨根ふた化、人格排泄、身体変形……といった、当サイトの子達の尊厳を破壊するような行為は禁止です。一般的に言う"かわいい"のまま愛してやってくれうちのこを。<br>
-                            うちの子達がこういうのをするのもあまり好きではないですが、地雷ってほどではないので禁止はしません。<small>でも避けてくれると嬉しいな……</small>
-                        </div>
-                        6.2.6.
-                        <div class="divRuleObj">
-                            ヒトを除く<b>実在動物およびその類似物</b>との性行為。<br>
-                            獣姦・蟲姦・蛙姦等はすべて禁止です。また、<b>それらを模した亜人や動物も禁止</b>です。<br>
-                            これは作者(TIE)が嫌いというわけではなく、<b>ここに対してかなり地雷と好きが入り混じっており、その判断基準が他者に伝わりにくい</b>ものであるためです。ご了承ください。
-                        </div>
-                        6.2.7.
-                        <div class="divRuleObj">
-                            ヒトを除く<b>知能のある存在</b>との性行為。<br>
-                            上記と被りますが、<b>オークやゴブリン、亜人、ゾンビ、喋る触手</b>等が該当し、これらとの性行為を禁じます。
-                        </div>
-                    </div>
-                </div>
-                7.
-                <div class="divRuleObj">
-                    この項目は、<b>当サイトのキャラクターたちが出てくるならこんなのがいいなー！</b>というもの、すなわち作者(TIE)のフェチのリストです。<br>
-                    「これに使わないといけない」ではなく、<b>「これに使ってくれると私すっごく嬉しいなぁー！」</b>というものですので、禁止事項にかからない限りは気にせずやってください。
-                </div>
-                <div class="divRuleObj">
-                    7.1.
-                    <div class="divRuleObj">
-                        <b>ラバー・エナメル等の光沢服</b>系。<br>
-                        “黒は女性を美しく見せる”とは言いますが、それに光沢が乗ると立体感が倍ドンされてそれだけで女性が魅力的になります。<br>
-                        なお、当サイトのキャラクターは全員”素肌が黒ラバー”が仕様です。なのでラバーでなければいけなかったり……。
-                    </div>
-                    7.2.
-                    <div class="divRuleObj">
-                        <b>手淫</b>シチュ。<br>
-                        手でシてくれる系についてはいくつあっても嬉しいです。ラバーおててはそれだけでえっち……
-                    </div>
-                    7.3.
-                    <div class="divRuleObj">
-                        <b>髪淫シチュ</b>。<br>
-                        髪もいいですよね。当サイトのキャラクターは髪が<b>途中から異形化している</b>子が多いですので、そういうヒトと少し違ったヒトに見た目が近いだけの異形という魅力もいいと思うんです。
-                    </div>
-                    7.4.
-                    <div class="divRuleObj">
-                        <b>女性優位系</b>。<br>
-                        これは私の趣味です。女性が優位なのはとてもよき。責められたい。
-                    </div>
-                    7.5.
-                    <div class="divRuleObj">
-                        <b>現実に存在しない生物</b>との性行為。<br>
-                        スライム・触手等の、現実世界に存在しないファンタジー全開の生物が大好きです。”何をしてくるのかわからない”というのがすばらしいですよね。
-                    </div>
-                    7.6.
-                    <div class="divRuleObj">
-                        <b>機械</b>との性行為。<br>
-                        こちらも“プログラム通りに動く何を考えているかわからないもの”という括りですね。一方的に作業として性行為を求められる。いや機械だと性行為って言っていいのかわかんないですけど……。
-                    </div>
-                    7.7.
-                    <div class="divRuleObj">
-                        <b>いちゃらぶ</b>えっちや<b>仲良し</b>えっち系。<br>
-                        えっちは交流であるべき、仲良く双方が幸せになるべき。そうだと思いませんか？思いませんか……？思ってください。
-                    </div>
-                </div>
-                8.
-                <div class="divRuleObj">
-                    通常のものと同様、上記禁止事項に引っかかっていても、<b>作者(TIE)が許可した事項であれば使って問題ありません</b>。<br>
-                    その場合、見る人が許可済みの作品であることが分かるようにしてください。
-                </div>
-                9.
-                <div class="divRuleObj">
-                    規約に関する質問や上記許可の申請については、作者(TIE)にお問い合わせください。<br>
-                    ぼすきーの谷菟彩稚秉かTIEのアカウント宛にメンションするのが一番早いです。
-                </div>
-            </div>
-        </div>
-    </body>
+	<head>
+		<link href="./template.css" rel="stylesheet" />
+	</head>
+	<body>
+		<div class="divAllParent">
+			<div class="divHeadmenu">
+				<a href="index.html">
+					<div class="divHeadMenuButtonCasing">
+						<div class="divHeadMenuButtonHome">
+							HOME
+						</div>
+					</div>
+				</a>
+				<a href="character.html">
+					<div class="divHeadMenuButtonCasing">
+						<div class="divHeadMenuButtonCharacter">
+							キャラクター
+						</div>
+					</div>
+				</a>
+				<div class="divHeadMenuButtonCasing">
+					<div class="divHeadMenuButtonRule">
+						規約
+					</div>
+				</div>
+				<a href="distribute.html">
+					<div class="divHeadMenuButtonCasing">
+						<div class="divHeadMenuButtonDistribute">
+							配布
+						</div>
+					</div>
+				</a>
+			</div>
+		</div>
+		<div class="divMain">
+			通常の規約はこっち→<a href="rule.html">■</a><br>
+			<br>
+			<br>
+			<div class="divRuleObj">
+				1.
+				<div class="divRuleObj">
+					この規約に納得し、この規約を守らない限り、<b>R-18類には使っちゃダメ</b>です。<br>
+					なお、この規約における「R-18類」という表現は、<b>厳密なR-18およびR-18Gの利用だけでなく、紳士向けやボイロAVといったR-17、R-17.9……なものまで含めたすべて</b>を指します。
+				</div>
+				2.
+				<div class="divRuleObj">
+					この規約は、<b>「法に触れない」「音源管理者(TIE)の地雷を踏まない」</b>という2目的のためにあります。<br>
+					そのため、音源管理者(TIE)を除く<b>すべての使用者</b>に適用されます。守ってね。
+				</div>
+				3.
+				<div class="divRuleObj">
+					通常利用に関する規約で禁止している事項は<b>R-18類への利用においても当然ダメ</b>です。
+				</div>
+				4.
+				<div class="divRuleObj">
+					適切な<b>ゾーニングなしにこれらの作品を公開するのは絶対ダメ</b>です。警察出てきちゃうからね。<br>
+					適切なゾーニングがわからなければ、タイトルに入れる、サムネイルに入れる、説明文に入れる、タグを付ける等を可能な限り行ってください。
+				</div>
+				5.
+				<div class="divRuleObj">
+					項目6および7は、<b>非常に直球な内容が書かれている「音源管理者(TIE)の地雷リストと性癖リスト」</b>です。<br>
+					これを目にしたくない場合、<b>「直接性的な行為をしない・されない、またその現場に居合わせない、黒幕やモブ等の登場人物」</b>のみに限定してR-18類への利用を行ってください。
+				</div>
+				6.
+				<div class="divRuleObj">
+					この項目は、<b>当サイトのキャラクター達への禁止行為</b>（すなわち音源管理者(TIE)の地雷性癖）を列挙する項目です。<br>
+					厳密には「ジャンル自体は地雷じゃないけど、ジャンル内にある特に名称のない派閥が特大の地雷」というものも含みます。逆に、自覚していない地雷については把握していないので、これから増える可能性もあります。<br>
+					「これらの性癖を否定するもの」ではなく、「音源管理者(TIE)の精神的健康のための自衛行為」であることをご理解ください。<br>
+					また、繰り返しになりますが、<b>直球な表現</b>が発生します。見たくない場合は項目5の許諾項目のみの利用に留めてください。
+				</div>
+				<div class="divRuleObj">
+					6.1.
+					<div class="divRuleObj">
+						当サイトのキャラクターが<b>被害者の場合だけでなく、加害者やモブの場合も含め、とにかく絶対にダメ</b>！というものです。
+					</div>
+					<div class="divRuleObj">
+						6.1.1.
+						<div class="divRuleObj">
+							<b>汚物</b>の表現。<br>
+							特にスカトロ(糞、尿、屁、その他排泄物全て)、吐瀉物等は本当にダメです。同様に、強烈な悪臭についても苦手です。排泄・吐瀉等の行為共々、<b>共存することを禁止</b>します。
+						</div>
+						6.1.2.
+						<div class="divRuleObj">
+							<b>ゴア</b>表現・<b>グロテスク</b>表現。<br>
+							達磨などの欠損表現および、大怪我や失血死といった多量の流血表現を禁じます。<small>まあ当サイトの子達は全員人間じゃないので赤い血は出ませんが……</small><br>
+							ただし、軽い傷のような小規模な流血や、流血の全くないゴア表現であれば問題ありません。例として、谷菟彩稚秉は人間の一部を木化させて切り落とすような攻撃が可能ですが、<b>流血はしないので問題ありません</b>。
+						</div>
+						6.1.3.
+						<div class="divRuleObj">
+							<b>ハラスメント</b>行為。<br>
+							セクハラやパワハラなど、<b>本人が嫌がるようなことをしないであげて</b>ください。暴れると大変なことになります。<br>
+							ただ、愛し合う相手とボディタッチするなど、<b>ハラスメントでないものについては当然問題ありません</b>。
+						</div>
+					</div>
+					6.2.
+					<div class="divRuleObj">
+						当サイトの子達が被害者になる場合についてのみの禁止事項です。<br>
+						同時に登場する他キャラクターに対しては適用されません。
+					</div>
+					<div class="divRuleObj">
+						6.1.1.
+						<div class="divRuleObj">
+							<b>ラバースーツを脱がす</b>こと。<br>
+							当サイトのキャラクターは全員ラバースーツが肌そのものであり、当然原理的に脱ぐことができず、その下にも肌色の肌はありません。というか肌がありません。<b>犯したい場合はラバースーツの上からヤってください</b>。
+						</div>
+						6.2.2.
+						<div class="divRuleObj">
+							<b>口淫</b>行為。<br>
+							フェラや食ザーなどを禁止します。音源管理者(TIE)が「物を口に入れる」ということについて過度に神聖視しているためです。ご理解ください。
+						</div>
+						6.2.3.
+						<div class="divRuleObj">
+							<b>愛のない</b>性行為。<br>
+							乱交やレイプ等の表現は禁止です。<br>
+							そもそも谷菟彩家は全員そういうものを嫌いますし、実際にそうなれば相手を容赦なく殺害する子ばかりです。
+						</div>
+						6.2.4.
+						<div class="divRuleObj">
+							<b>精液風呂</b>や<b>精液染み服</b>、およびその類似表現。<br>
+							精液溜まりに漬けたり、精液の塊をぶつけたり、精液を染み込ませた服を着せたり……などは上記6.1.1.の異臭の禁止に引っかかります。ご理解ください。
+						</div>
+						6.2.5.
+						<div class="divRuleObj">
+							<b>無様</b>系。<br>
+							落書き、鼻フック、着ぐるみ、(外部干渉による)能力弱体化、敗北調教、変脳、肥満化、巨根ふた化、人格排泄、身体変形……といった、当サイトの子達の尊厳を破壊するような行為は禁止です。一般的に言う"かわいい"のまま愛してやってくれうちのこを。<br>
+							うちの子達がこういうのをするのもあまり好きではないですが、地雷ってほどではないので禁止はしません。<small>でも避けてくれると嬉しいな……</small>
+						</div>
+						6.2.6.
+						<div class="divRuleObj">
+							ヒトを除く<b>実在動物およびその類似物</b>との性行為。<br>
+							獣姦・蟲姦・蛙姦等はすべて禁止です。また、<b>それらを模した亜人や動物も禁止</b>です。<br>
+							これは音源管理者(TIE)が嫌いというわけではなく、<b>ここに対してかなり地雷と好きが入り混じっており、その判断基準が他者に伝わりにくい</b>ものであるためです。ご了承ください。
+						</div>
+						6.2.7.
+						<div class="divRuleObj">
+							ヒトを除く<b>知能のある存在</b>との性行為。<br>
+							上記と被りますが、<b>オークやゴブリン、亜人、ゾンビ、喋る触手</b>等が該当し、これらとの性行為を禁じます。
+						</div>
+					</div>
+				</div>
+				7.
+				<div class="divRuleObj">
+					この項目は、<b>当サイトのキャラクターたちが出てくるならこんなのがいいなー！</b>というもの、すなわち音源管理者(TIE)のフェチのリストです。<br>
+					「これに使わないといけない」ではなく、<b>「これに使ってくれると私すっごく嬉しいなぁー！」</b>というものですので、禁止事項にかからない限りは気にせずやってください。
+				</div>
+				<div class="divRuleObj">
+					7.1.
+					<div class="divRuleObj">
+						<b>ラバー・エナメル等の光沢服</b>系。<br>
+						“黒は女性を美しく見せる”とは言いますが、それに光沢が乗ると立体感が倍ドンされてそれだけで女性が魅力的になります。<br>
+						なお、当サイトのキャラクターは全員”素肌が黒ラバー”が仕様です。なのでラバーでなければいけなかったり……。
+					</div>
+					7.2.
+					<div class="divRuleObj">
+						<b>手淫</b>シチュ。<br>
+						手でシてくれる系についてはいくつあっても嬉しいです。ラバーおててはそれだけでえっち……
+					</div>
+					7.3.
+					<div class="divRuleObj">
+						<b>髪淫シチュ</b>。<br>
+						髪もいいですよね。当サイトのキャラクターは髪が<b>途中から異形化している</b>子が多いですので、そういうヒトと少し違ったヒトに見た目が近いだけの異形という魅力もいいと思うんです。
+					</div>
+					7.4.
+					<div class="divRuleObj">
+						<b>女性優位系</b>。<br>
+						これは私の趣味です。女性が優位なのはとてもよき。責められたい。
+					</div>
+					7.5.
+					<div class="divRuleObj">
+						<b>現実に存在しない生物</b>との性行為。<br>
+						スライム・触手等の、現実世界に存在しないファンタジー全開の生物が大好きです。”何をしてくるのかわからない”というのがすばらしいですよね。
+					</div>
+					7.6.
+					<div class="divRuleObj">
+						<b>機械</b>との性行為。<br>
+						こちらも“プログラム通りに動く何を考えているかわからないもの”という括りですね。一方的に作業として性行為を求められる。いや機械だと性行為って言っていいのかわかんないですけど……。
+					</div>
+					7.7.
+					<div class="divRuleObj">
+						<b>いちゃらぶ</b>えっちや<b>仲良し</b>えっち系。<br>
+						えっちは交流であるべき、仲良く双方が幸せになるべき。そうだと思いませんか？思いませんか……？思ってください。
+					</div>
+				</div>
+				8.
+				<div class="divRuleObj">
+					通常のものと同様、上記禁止事項に引っかかっていても、<b>音源管理者(TIE)が許可した事項であれば使って問題ありません</b>。<br>
+					その場合、見る人が許可済みの作品であることが分かるようにしてください。
+				</div>
+				9.
+				<div class="divRuleObj">
+					規約に関する質問や上記許可の申請については、音源管理者(TIE)にお問い合わせください。<br>
+					ぼすきーの谷菟彩稚秉かTIEのアカウント宛にメンションするのが一番早いです。
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
