HEADとかいろいろ修正 何修正したか忘れた titleとアイコンは追加した あとなんだっけ

--- a/character_tie_7a1a79c9.html
+++ b/character_tie_7a1a79c9.html
@@ -1,6 +1,8 @@
 <html lang="ja">
 	<head>
 		<link href="./template.css" rel="stylesheet" />
+		<link href="./res/icon.png" rel="icon" />
+		<title>稚き夢｜谷菟彩はうす</title>
 	</head>
 	<body>
 		<div class="divMain">
