--- a/distribute.html
+++ b/distribute.html
@@ -1,6 +1,8 @@
 <html lang="ja">
 	<head>
 		<link href="./template.css" rel="stylesheet" />
+		<link href="./res/icon.png" rel="icon" />
+		<title>配布｜谷菟彩はうす</title>
 	</head>
 	<body>
 		<div class="divAllParent">
