配布にデモ音声を追加 ・デモ紹介ページを追加 ・配布ページにデモへのリンクを追加 ・配布ページにタグを追加 ・MYCOEIROINK 谷菟彩稚秉 澪にデモ1～3を追加 ・MYCOEIROINK 谷菟彩稚秉 流にデモ1～3を追加 ・MYCOEIROINK 谷菟彩稚秉 潺にデモ1～3を追加 ・UTAU 谷菟彩稚秉 連続音にデモ2を追加

--- a/distribute.html
+++ b/distribute.html
@@ -38,7 +38,7 @@
 		<div class="divMain">
 			<br>
 			ダウンロード前に<a href="rule.html">規約</a>をよーくご確認ください！<br>
-			<div class="divDistributeContainerMYCOE">
+			<div class="divDistributeContainerMYCOE" id="MCI_YatoiroTIE_Mio">
 				<div class="divDistributeContainerItem">
 					<h1><b>MYCOEIROINK 谷菟彩稚秉 澪</b><br></h1>
 					<b>MYCOEIROINK 谷菟彩稚秉 澪</b>は、COEIROINKによる音声合成を想定用途とした女声合成音声ライブラリです。<br>
@@ -52,7 +52,7 @@
 						※形態を問わず、キャラクター「谷菟彩稚秉」としての利用を想定しています。
 					</ul>
 					<br>
-					配布場所→<a href="https://drive.google.com/file/d/1-dJzNZOxmpx5kl8u4Ms_lFxQTE3eVh37/view?usp=sharing">■</a><br>
+					配布場所→<a href="https://drive.google.com/file/d/1-dJzNZOxmpx5kl8u4Ms_lFxQTE3eVh37/view?usp=sharing">■</a>　　デモ音声→<a href="./distribute_demo.html#MCI_YatoiroTIE_Mio">■</a><br>
 					現在の最新バージョンはv1.1です。<br>
 					<br>
 					更新履歴<br>
@@ -60,7 +60,7 @@
 					(2025/09/08) v1.1 名称を「MYCOEIROINK 谷菟彩稚秉」から「MYCOEIROINK 谷菟彩稚秉 澪」に変更。<br>
 				</div>
 			</div>
-			<div class="divDistributeContainerMYCOE">
+			<div class="divDistributeContainerMYCOE" id="MCI_YatoiroTIE_Nagare">
 				<div class="divDistributeContainerItem">
 					<h1><b>MYCOEIROINK 谷菟彩稚秉 流</b><br></h1>
 					<b>MYCOEIROINK 谷菟彩稚秉 流</b>は、COEIROINKによる音声合成を想定用途とした女声合成音声ライブラリです。<br>
@@ -75,14 +75,14 @@
 						※形態を問わず、キャラクター「谷菟彩稚秉」としての利用を想定しています。
 					</ul>
 					<br>
-					配布場所→<a href="ここにURLを入れます">■</a><br>
+					配布場所→<a href="ここにURLを入れます">■</a>　　デモ音声→<a href="./distribute_demo.html#MCI_YatoiroTIE_Nagare">■</a><br>
 					現在の最新バージョンはv1.0です。<br>
 					<br>
 					更新履歴<br>
 					(2025/09/08) v1.0 配布開始<br>
 				</div>
 			</div>
-			<div class="divDistributeContainerMYCOE">
+			<div class="divDistributeContainerMYCOE" id="MCI_YatoiroTIE_Seseragi">
 				<div class="divDistributeContainerItem">
 					<h1><b>MYCOEIROINK 谷菟彩稚秉 潺</b><br></h1>
 					<b>MYCOEIROINK 谷菟彩稚秉 潺</b>は、COEIROINKによる音声合成を想定用途とした女声合成音声ライブラリです。<br>
@@ -97,14 +97,14 @@
 						※形態を問わず、キャラクター「谷菟彩稚秉」としての利用を想定しています。
 					</ul>
 					<br>
-					配布場所→<a href="ここにURLを入れます">■</a><br>
+					配布場所→<a href="ここにURLを入れます">■</a>　　デモ音声→<a href="./distribute_demo.html#MCI_YatoiroTIE_Seseragi">■</a><br>
 					現在の最新バージョンはv1です。<br>
 					<br>
 					更新履歴<br>
 					(2025/09/08) v1.0 配布開始<br>
 				</div>
 			</div>
-			<div class="divDistributeContainerUTAU">
+			<div class="divDistributeContainerUTAU" id="UTU_YatoiroTIE_Renzoku">
 				<div class="divDistributeContainerItem">
 					<h1><b>UTAU 谷菟彩稚秉 連続音</b></h1><br>
 					<b>UTAU 谷菟彩稚秉 連続音</b>は、UTAUによる歌唱音声合成を用途とした女声合成音声ライブラリです。<br>
@@ -117,14 +117,14 @@
 						※形態を問わず、キャラクター「谷菟彩稚秉」としての利用を想定しています。
 					</ul>
 					<br>
-					配布場所→<a href="https://drive.google.com/file/d/1_3nGMBAM5iKsK6QRvS4rJeGHfV0eRkNg/view?usp=sharing">■</a><br>
+					配布場所→<a href="https://drive.google.com/file/d/1_3nGMBAM5iKsK6QRvS4rJeGHfV0eRkNg/view?usp=sharing">■</a>　　デモ音声→<a href="./distribute_demo.html#UTU_YatoiroTIE_Renzoku">■</a><br>
 					現在の最新バージョンはv1です。<br>
 					<br>
 					更新履歴<br>
 					(2024/06/20) v1.0 配布開始<br>
 				</div>
 			</div>
-			<div class="divDistributeContainerIllust">
+			<div class="divDistributeContainerIllust" id="IST_YatoiroTIE_SD">
 				<div class="divDistributeContainerItem">
 					<h1><b>谷菟彩稚秉立ち絵(SD)</b></h1><br>
 					<b>谷菟彩稚秉立ち絵(SD)</b>は、たぬざか様に作成いただいた公式監修立ち絵です。<br>
@@ -143,7 +143,7 @@
 					(2025/09/08) v1.0 配布開始<br>
 				</div>
 			</div>
-			<div class="divDistributeContainerIllust">
+			<div class="divDistributeContainerIllust" id="LGO_YatoiroTIE_01">
 				<div class="divDistributeContainerItem">
 					<h1><b>谷菟彩稚秉公式ロゴ</b></h1><br>
 					<b>谷菟彩稚秉公式ロゴ</b>は、音源管理者(TIE)が作成した、谷菟彩稚秉を表すロゴ画像です。<br>
