UTAU稚秉v2関係を仮追加 ・9/8までになんとかしろTIE　はい……

--- a/distribute.html
+++ b/distribute.html
@@ -109,7 +109,7 @@
 					<h1><b>UTAU 谷菟彩稚秉 連続音</b></h1><br>
 					<b>UTAU 谷菟彩稚秉 連続音</b>は、UTAUによる歌唱音声合成を用途とした女声合成音声ライブラリです。<br>
 					中の人は音源管理者(TIE)にボイスチェンジャーをかけたものになります。<br>
-					録音リストには「巽式8モーラ連続音改変リスト_ふつう」を用いており、音源高はC5です。<br>
+					録音リストには「巽式8モーラ連続音改変リスト_ふつう」「山本プー式語尾息収録セット(改変)」を用いました。音源高はC5です。<br>
 					<br>
 					想定用途
 					<ul>
@@ -117,11 +117,12 @@
 						※形態を問わず、キャラクター「谷菟彩稚秉」としての利用を想定しています。
 					</ul>
 					<br>
-					配布場所→<a href="https://drive.google.com/file/d/1_3nGMBAM5iKsK6QRvS4rJeGHfV0eRkNg/view?usp=sharing">■</a>　　デモ音声→<a href="./distribute_demo.html#UTU_YatoiroTIE_Renzoku">■</a><br>
-					現在の最新バージョンはv1です。<br>
+					配布場所→<a href="ここに配布リンク貼る">■</a>　　デモ音声→<a href="./distribute_demo.html#UTU_YatoiroTIE_Renzoku">■</a><br>
+					現在の最新バージョンはv2です。<br>
 					<br>
 					更新履歴<br>
 					(2024/06/20) v1.0 配布開始<br>
+					(2024/09/08) v2.0 「山本プー式語尾息収録セット(TIEによる改変アリ)」を用いた息および特殊音素を追加<br>
 				</div>
 			</div>
 			<div class="divDistributeContainerIllust" id="IST_YatoiroTIE_SD">
