--- a/distribute_demo.html
+++ b/distribute_demo.html
@@ -86,6 +86,10 @@
 			<div class="divDistributeContainerUTAU" id="UTU_YatoiroTIE_Renzoku">
 				<div class="divDistributeContainerItem">
 					<h1><b>UTAU 谷菟彩稚秉 連続音</b></h1><br>
+					UTAU 谷菟彩稚秉 連続音｜デモ音声1<br>
+					<audio controls src="res/utau_yatoirotie_renzokuon_001__x0o0x__tamatamo.wav" type="audio/wav">UTAU 谷菟彩稚秉 連続音｜デモ音声1</audio><br>
+					「」 - 谷菟彩稚秉 cover ｜ 作曲：x0o0x_ 様 ｜ 調声：丹間 (@tamatamo) 様<br>
+					<br>
 					UTAU 谷菟彩稚秉 連続音｜デモ音声2<br>
 					<audio controls src="res/utau_yatoirotie_renzokuon_002_iseiniikoune_iyowa_mitsukieira624.wav" type="audio/wav">UTAU 谷菟彩稚秉 連続音｜デモ音声2</audio><br>
 					「異星にいこうね」 - 谷菟彩稚秉 cover ｜ 作曲：いよわ 様 ｜ 調声：ara(碧月珱蘿) (@mitsukieira624) 様<br>
