立ち絵とロゴにDLリンクを追加 ・説明いる？？？

--- a/distribute.html
+++ b/distribute.html
@@ -136,7 +136,7 @@
 						※形態を問わず、キャラクター「谷菟彩稚秉」としての利用を想定しています。
 					</ul>
 					<br>
-					配布場所→<a href="ここにURLを入れます">■</a><br>
+					配布場所→<a href="https://drive.google.com/file/d/1h_b7KLGVg5P2yCj2QqO75UBN7Yi7MDLs/view?usp=sharing">■</a><br>
 					現在の最新バージョンはv1です。<br>
 					<br>
 					更新履歴<br>
@@ -158,7 +158,7 @@
 						どうしても文字でクレジットしたくない場合等にご活用ください。
 					</ul>
 					<br>
-					配布場所→<a href="ここにURLを入れます">■</a><br>
+					配布場所→<a href="https://drive.google.com/file/d/17b6T2gqaGX-hOrPbLYv8EnyvilQFFRHY/view?usp=sharing">■</a><br>
 					現在の最新バージョンはv1です。<br>
 					<br>
 					更新履歴<br>
